--- a/Distance-Metrics.ipynb
+++ b/Distance-Metrics.ipynb
@@ -34,7 +34,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "cdbba380",
+   "id": "eedf94b6",
    "metadata": {},
    "source": [
     "There are various types of distance metrics that we used for either supervised learning(eg.KNN) or unsupervised learning(eg.Kmeans).\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57425523",
+   "id": "b54c3328",
    "metadata": {},
    "source": [
     "### 1. Minkowski Distance"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2c40eb13",
+   "id": "084d0a60",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d1fde65",
+   "id": "d8aa9d64",
    "metadata": {},
    "source": [
     "### 2. Manhattan Distance"
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b8f16afe",
+   "id": "6f0460f5",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d96d3ebb",
+   "id": "93d4a111",
    "metadata": {},
    "source": [
     "### 3. Euclidean Distance"
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e1e63e31",
+   "id": "fd596acd",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb9cb404",
+   "id": "373fbe32",
    "metadata": {},
    "source": [
     "### 4. Hamming Distance"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b5c79dd3",
+   "id": "4274aea0",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9171f51f",
+   "id": "2d18f68f",
    "metadata": {},
    "source": [
     "### 5. Cosine Distance & Cosine Similarity"
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3646ad95",
+   "id": "eba1db82",
    "metadata": {
     "scrolled": true
    },
@@ -247,6 +247,17 @@
     "print(\"figure-1 ==> \",distance.cosine([0,6],[6,0]))\n",
     "print(\"figure-2 ==> \",distance.cosine([2,0],[6,0]))\n",
     "print(\"figure-3 ==> \",distance.cosine([3,5],[4,2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70880b69",
+   "metadata": {},
+   "source": [
+    "##### references\n",
+    "- https://towardsdatascience.com/9-distance-measures-in-data-science-918109d069fa\n",
+    "- https://medium.com/@kunal_gohrani/different-types-of-distance-metrics-used-in-machine-learning-e9928c5e26c7#:~:text=Manhattan%20distance%20is%20usually%20preferred,similarity%20between%20two%20data%20points.\n",
+    "- https://pub.towardsai.net/5-most-commonly-used-distance-metrics-in-machine-learning-97c27527b011"
    ]
   }
  ],
