--- a/Distance-Metrics.ipynb
+++ b/Distance-Metrics.ipynb
@@ -78,8 +78,8 @@
     "\n",
     "### 6. Chebyshev Distance\n",
     "- Chebyshev distance is defined as the greatest of difference between two vectors along any coordinate dimension. In other words, it is simply the maximum distance along one axis.\n",
-    "![image-12.png](attachment:image-12.png)\n",
-    "![image-13.png](attachment:image-13.png)"
+    "![image-13.png](attachment:image-13.png)\n",
+    "![image-12.png](attachment:image-12.png)\n"
    ]
   },
   {
