--- a/Distance-Metrics.ipynb
+++ b/Distance-Metrics.ipynb
@@ -55,7 +55,7 @@
     "- Euclidean distance is the straight line distance between 2 data points in a plane.\n",
     "- Euclidean distance is not scale in-variant which means that distances computed might be skewed depending on the units of the features.\n",
     "- Typically, one needs to normalize the data before using Euclidean Distance.()\n",
-    "- Good to use for low dimensional data.\n",
+    "- Good to use for low dimensional data since it is more sensitive to curse of dimensionality.\n",
     "- We can get the equation for Euclidean distance by substituting p = 2 in the Minkowski distance formula. The formula is:\n",
     "![image-8.png](attachment:image-8.png)\n",
     "![image-7.png](attachment:image-7.png)\n",
