--- a/Distance-Metrics.ipynb
+++ b/Distance-Metrics.ipynb
@@ -262,7 +262,7 @@
    "id": "f4f01bf6",
    "metadata": {},
    "source": [
-    "##### references\n",
+    "##### Reference:\n",
     "- https://towardsdatascience.com/9-distance-measures-in-data-science-918109d069fa\n",
     "- https://medium.com/@kunal_gohrani/different-types-of-distance-metrics-used-in-machine-learning-e9928c5e26c7#:~:text=Manhattan%20distance%20is%20usually%20preferred,similarity%20between%20two%20data%20points.\n",
     "- https://pub.towardsai.net/5-most-commonly-used-distance-metrics-in-machine-learning-97c27527b011"
